<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dados_pessoa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app.nossasaudeapp.activities.PessoaActivity"
    android:background="@color/colorBackQuad4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/nomeDadosPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorLink="@color/colorMedicamento"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dtNascimentoDadosPessoa"
                android:textSize="18dp"
                android:text="01 de janeiro de 1991"
                android:padding="10dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupSexo"
            android:paddingBottom="15dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMale"
                android:text="@string/masculino"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonFemale"
                android:text="@string/feminino"
                android:layout_weight="1"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tipoSanguineo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_sanguineo"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/spinnerTipoSanguineo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <Button
            android:id="@+id/btnSalvarDadosPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salvar" />

    </LinearLayout>

</RelativeLayout>
