<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMedicamento"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/default_padding_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_edit_black_24dp" />

                <EditText
                    android:id="@+id/medNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nomeMedicamento"
                    android:layout_weight="5"
                    android:layout_marginStart="@dimen/default_margin_layout"
                    android:layout_marginLeft="@dimen/default_margin_layout"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_colorize_black_24dp" />

                    <Spinner
                        android:id="@+id/spinnerUnidadeMedicamento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/default_margin_layout"
                        android:layout_marginLeft="@dimen/default_margin_layout"
                        android:layout_weight="5" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_margin="5dp"
                    android:background="@color/accentLight"
                    android:layout_marginBottom="@dimen/default_margin_layout"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_colorize_black_24dp" />

                    <EditText
                        android:id="@+id/qtDoseMedicamento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_marginStart="@dimen/default_margin_layout"
                        android:layout_marginLeft="@dimen/default_margin_layout"
                        android:layout_weight="5"
                        android:hint="Quantidade"
                        android:layout_marginBottom="5dp"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_access_alarm_black_24dp" />

                    <TextView
                        android:id="@+id/medHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/time"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="@dimen/default_margin_layout"
                        android:layout_marginLeft="@dimen/default_margin_layout"
                        android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="5dp"
                android:background="@color/accentLight"
                android:layout_marginBottom="@dimen/default_margin_layout"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_today_black_24dp" />

                    <TextView
                        android:id="@+id/medData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:layout_marginStart="@dimen/default_margin_layout"
                        android:layout_marginLeft="@dimen/default_margin_layout"
                        android:text="@string/date"
                        android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="5dp"
                android:background="@color/accentLight"
                android:layout_marginBottom="@dimen/default_margin_layout"/>

            <LinearLayout
                android:id="@+id/repeat_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_refresh_black_24dp" />

                <TextView
                    android:id="@+id/repeat_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/default_margin_layout"
                    android:layout_marginLeft="@dimen/default_margin_layout"
                    android:layout_weight="5"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/no_repeat"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_height"
                android:layout_marginLeft="@dimen/line_separator_margin_side_large"
                android:layout_marginStart="@dimen/line_separator_margin_side_large"
                android:background="@color/lightGray" />

            <LinearLayout
                android:id="@+id/forever_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/table_row_default_horizontal_padding"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="@dimen/table_row_default_padding_side"
                android:paddingRight="@dimen/table_row_default_padding_side"
                android:paddingTop="@dimen/table_row_default_horizontal_padding"
                android:visibility="gone"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/image_margin_side"
                    android:layout_marginStart="@dimen/image_margin_side"
                    android:tint="@color/iconTint" />

                <TextView
                    android:id="@+id/forever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/text_margin_side"
                    android:layout_marginStart="@dimen/text_margin_side"
                    android:layout_weight="1"
                    android:text="@string/forever"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_toggle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:showText="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="@dimen/table_row_default_padding_side"
                android:paddingRight="@dimen/table_row_default_padding_side"
                android:visibility="gone"
                android:weightSum="1">

                    <TextView
                        android:id="@+id/show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="62dp"
                        android:layout_marginStart="62dp"
                        android:text="@string/repeat_notification"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/show_times_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="4"
                        android:minWidth="30dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/one"
                        android:textColorHighlight="@color/accentLight"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/times"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSalvarMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/concluir" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>